@@ -3,3 +3,4 @@ numpy
 scipy
 matplotlib
 scikit-learn
+mlpack
